# LTSS

./: .gitignore  Build.bat  Build.sh  CMakeLists.txt  README.md  Run.bat  Run.sh
Examples/: CMakeLists.txt
Examples/Ex1/: CMakeLists.txt
Examples/Ex1/src/: main.cpp
res/: image.ppm
src/: Camera.h  Hittable.h  Hittable_list.h  Interval.h  Material.h  Rtweekend.h  Sphere.h  color.h  main.cpp  vec3.h
